objects/Parent_To_Child_Lead_Mapping__mdt.object
<CustomObject>
    <description>MA Global Rollout</description>
    <fields>
        <fullName>MAContactFieldAPIName__c</fullName>
        <inlineHelpText>This will map the values from contact to Lead</inlineHelpText>
        <label>MAContactFieldAPIName</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALeadContactMap__c</fullName>
        <label>MALeadContactMap</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALeadFieldAPIName__c</fullName>
        <label>MALeadFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMLeadFieldAPIName__c</fullName>
        <label>SMLeadFieldAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Parent To Child Lead Mapping</label>
    <pluralLabel>Parent To Child Lead Mapping</pluralLabel>
</CustomObject>